Made changes to fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,6 @@ body {
   padding: 0 2rem;
 }
 
-body {
-  background-color: #000;
-  color: #fff;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
